--- a/FRONTEND/src/index.css
+++ b/FRONTEND/src/index.css
@@ -1,4 +1,10 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
+
+
+@import url('https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css');
+@import url('https://cdn.jsdelivr.net/npm/daisyui@5/dist/full.css');
+@import url('https://cdn.jsdelivr.net/npm/daisyui@5/themes.css');
+@import url('https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4');
+
+/* Your custom styles */
+@import './styles.css';
